# Bankruptcy_Dash

./: README.md  app.py  model.pkl  pyproject.toml  requirements.txt  test.ipynb
