[project]
name = "finance-projet"
version = "0.1.0"
description = ""
authors = [
    {name = "lucas"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kagglehub (>=0.3.12,<0.4.0)",
    "imblearn (>=0.0,<0.1)",
    "xgboost (>=3.0.0,<4.0.0)",
    "shap (>=0.47.2,<0.48.0)",
    "lime (>=0.2.0.1,<0.3.0.0)",
    "ipython (>=9.2.0,<10.0.0)",
    "dash (>=3.0.4,<4.0.0)",
    "joblib (>=1.5.0,<2.0.0)",
    "dash-core-components (>=2.0.0,<3.0.0)",
    "dash-html-components (>=2.0.0,<3.0.0)"
]

[tool.poetry]
packages = [{include = "finance_projet", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
